@@ -1,3 +1,7 @@
+2019-02-13  Marc A. Smith  <marc.smith@quantum.com>
+
+	rc.0: updates to handle the ESOS ISO (don't attempt to do things that we can't when booting off the ISO); rc.2: disable loading the Switchtec module at boot (for now); initramfs_init: don't start SCST when we're running the ISO; rc.serial: hide output from grep; iso_installer.sh: added a hook for installation extras/customization
+
 2019-02-10  Marc A. Smith  <marc.smith@quantum.com>
 
 	keep the cryptography Python module at version 2.4.2 to avoid printed warnings when using; added the iso_installer.sh script to facilitate installing ESOS from an ISO; updated init/rc scripts to handle the ESOS ISO properly; updated the install.sh script for ESOS ISO
